--- a/My_Portfolio/index.html
+++ b/My_Portfolio/index.html
@@ -383,12 +383,12 @@ items-center justify-center gap-4">
         
         
 
-    <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border-[0.5px] 
+<!--     <a href="#" class="w-max flex items-center justify-center gap-2 text-gray-700 border-[0.5px] 
     border-gray-700 rounded-full py-3 px-10 mx-auto my-20 hover:bg-lightHover duration-500 dark:text-white dark:border-white ">
         Show More 
         <img src="./images/right-arrow-bold.png" alt="" class="w-4 dark:hidden">
         <img src="./images/right-arrow-white.png" alt="" class="w-4 hidden dark:block"> 
-    </a>
+    </a> -->
 
 </div>
 
